--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,11 @@
     },
     "includes": ["**", "!dist"]
   },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
+    }
+  },
   "javascript": {
     "formatter": {
       "quoteStyle": "double"
